/* --- CRC32.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef CRC32_H
#define CRC32_H

class CRC32 {
public:
    CRC32();
    ~CRC32();

private:

};

#endif // CRC32_H
