@startuml
skinparam packageStyle rectangle
title Util (helpers used across layers)

class CiLess <<functor>> {
  +bool operator()(string a, string b) const
}

class StringUtil {
  +string to_lower(string s)
  +bool   iequal(string a, string b)
  +string trim(string s)
  +string url_decode(string s)
}

class TimeUtil {
  +long long now_epoch()
  +string    http_date(long long epoch)
}

class MimeTypes {
  +string from_extension(string ext)
}

class ETagUtil {
  +string strong_from_bytes(const vector<char>&)
  +string strong_from_file(const string& absPath)
}

class CRC32 {
  +unsigned long compute(const vector<char>&)
  +unsigned long compute_file(const string& absPath)
}

ETagUtil ..> CRC32

CiLess ..> StringUtil
@enduml

